tests/requests/snapshots/records/can_delete_one@precords.snap
---
source: tests/requests/production_records.rs
assertion_line: 122
expression: "(response.status_code(), response.text())"
---
(
    204,
    "{}",
)
