tests/requests/snapshots/records/can_delete_one@weight.snap
---
source: tests/requests/weight.rs
assertion_line: 116
expression: "(request.status_code(), request.text())"
---
(
    204,
    "{}",
)
