tests/requests/snapshots/records/can_get_all@health.snap
---
source: tests/requests/health.rs
assertion_line: 37
expression: "(response.status_code(), response.text())"
---
(
    200,
    "[{\"id\":101,\"animalPid\":\"b2bd6270-8bec-42ce-99ff-d0eb1a076221\",\"animalName\":\"Daisy\",\"animalTagId\":\"AC001\",\"organisationPid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"organisationName\":\"Acme Corp\",\"condition\":\"fever\",\"severity\":\"medium\",\"status\":\"recovering\",\"recordDate\":\"2024-09-08\",\"description\":\"Daisy suffered from East coast fever\",\"treatment\":\"Antibiotics and vitamins administered by injection\",\"medicine\":\"Amoxillin\",\"dosage\":\"450\",\"cost\":\"1650.00\",\"performedBy\":\"John Artz\",\"notes\":null,\"createdBy\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"prognosis\":\"East coast fever\",\"createdByName\":\"John Doe\",\"createdAt\":\"2024-09-08T11:15:00Z\",\"updatedAt\":\"2024-09-08T11:15:00Z\"},{\"id\":102,\"animalPid\":\"62197c29-a2dd-4591-a4d0-92f6d7099760\",\"animalName\":\"Buttercup\",\"animalTagId\":\"AC002\",\"organisationPid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"organisationName\":\"Acme Corp\",\"condition\":\"fever\",\"severity\":\"high\",\"status\":\"recovered\",\"recordDate\":\"2024-12-12\",\"description\":\"Buttercup suffered from milk fever\",\"treatment\":\"Suppliments and vitamins administered by IV fluid injection\",\"medicine\":\"Calcium rich suppliments\",\"dosage\":\"250\",\"cost\":\"1850.00\",\"performedBy\":\"John Artz\",\"notes\":null,\"createdBy\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"prognosis\":\"Milk fever\",\"createdByName\":\"John Doe\",\"createdAt\":\"2024-12-12T11:15:00Z\",\"updatedAt\":\"2024-12-12T11:15:00Z\"},{\"id\":103,\"animalPid\":\"d909e761-36da-4062-ae78-abba4f7c1103\",\"animalName\":\"Ferdinand\",\"animalTagId\":\"AC003\",\"organisationPid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"organisationName\":\"Acme Corp\",\"condition\":\"fever\",\"severity\":\"high\",\"status\":\"recovered\",\"recordDate\":\"2024-11-28\",\"description\":\"Ferdinand suffered from East coast fever\",\"treatment\":\"Antibiotics and vitamins administered by injection\",\"medicine\":\"Amoxillin\",\"dosage\":\"650\",\"cost\":\"1750.00\",\"performedBy\":\"John Artz\",\"notes\":null,\"createdBy\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"prognosis\":\"East coast fever\",\"createdByName\":\"John Doe\",\"createdAt\":\"2024-11-28T11:15:00Z\",\"updatedAt\":\"2024-11-28T11:15:00Z\"}]",
)
