tests/requests/snapshots/records/can_get_all@precords.snap
---
source: tests/requests/production_records.rs
assertion_line: 53
expression: "(response.status_code(), response.text())"
---
(
    200,
    "[{\"id\":101,\"livestock_name\":\"Daisy\",\"animal_pid\":\"b2bd6270-8bec-42ce-99ff-d0eb1a076221\",\"organisation_name\":\"Acme Corp\",\"organisation_pid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"quantity\":\"20.00\",\"unit\":\"litre\",\"record_date\":\"2024-06-21\",\"quality\":\"Hight fat milk\",\"notes\":null,\"created_by\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"created_by_name\":\"John Doe\",\"created_at\":\"2024-06-21T10:15:00Z\",\"updated_at\":\"2024-06-21T10:15:00Z\"},{\"id\":102,\"livestock_name\":\"Buttercup\",\"animal_pid\":\"62197c29-a2dd-4591-a4d0-92f6d7099760\",\"organisation_name\":\"Acme Corp\",\"organisation_pid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"quantity\":\"22.00\",\"unit\":\"litre\",\"record_date\":\"2024-06-21\",\"quality\":\"Hight fat milk\",\"notes\":\"Perfect for butter production\",\"created_by\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"created_by_name\":\"John Doe\",\"created_at\":\"2024-06-21T10:15:00Z\",\"updated_at\":\"2024-06-21T10:15:00Z\"}]",
)
