tests/requests/snapshots/records/can_get_all@weight.snap
---
source: tests/requests/weight.rs
assertion_line: 34
expression: "(request.status_code(), request.text())"
---
(
    200,
    "[{\"id\":115,\"organisationPid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"organisationName\":\"Acme Corp\",\"animalPid\":\"f6417c11-d817-4626-9e8d-c68a44002d4b\",\"animalName\":\"Rose\",\"animalTagId\":\"AC007\",\"mass\":\"545.00\",\"recordDate\":\"2025-06-10\",\"notes\":\"Two monts post yearling weight\",\"createdBy\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"createdByName\":\"John Doe\",\"createdAt\":\"2024-04-10T07:15:00Z\",\"updatedAt\":\"2024-04-10T07:15:00Z\"},{\"id\":114,\"organisationPid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"organisationName\":\"Acme Corp\",\"animalPid\":\"f6417c11-d817-4626-9e8d-c68a44002d4b\",\"animalName\":\"Rose\",\"animalTagId\":\"AC007\",\"mass\":\"500.00\",\"recordDate\":\"2025-05-16\",\"notes\":\"Four hundred day weight\",\"createdBy\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"createdByName\":\"John Doe\",\"createdAt\":\"2025-05-10T07:15:00Z\",\"updatedAt\":\"2025-05-10T07:15:00Z\"},{\"id\":113,\"organisationPid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"organisationName\":\"Acme Corp\",\"animalPid\":\"f6417c11-d817-4626-9e8d-c68a44002d4b\",\"animalName\":\"Rose\",\"animalTagId\":\"AC007\",\"mass\":\"460.00\",\"recordDate\":\"2025-04-10\",\"notes\":\"Yearling weight\",\"createdBy\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"createdByName\":\"John Doe\",\"createdAt\":\"2024-04-10T07:15:00Z\",\"updatedAt\":\"2024-04-10T07:15:00Z\"},{\"id\":112,\"organisationPid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"organisationName\":\"Acme Corp\",\"animalPid\":\"f6417c11-d817-4626-9e8d-c68a44002d4b\",\"animalName\":\"Rose\",\"animalTagId\":\"AC007\",\"mass\":\"426.00\",\"recordDate\":\"2025-03-10\",\"notes\":\"One month post weaning weight\",\"createdBy\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"createdByName\":\"John Doe\",\"createdAt\":\"2024-04-10T07:15:00Z\",\"updatedAt\":\"2024-04-10T07:15:00Z\"},{\"id\":111,\"organisationPid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"organisationName\":\"Acme Corp\",\"animalPid\":\"f6417c11-d817-4626-9e8d-c68a44002d4b\",\"animalName\":\"Rose\",\"animalTagId\":\"AC007\",\"mass\":\"384.00\",\"recordDate\":\"2025-02-10\",\"notes\":\"Weaning weight\",\"createdBy\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"createdByName\":\"John Doe\",\"createdAt\":\"2024-04-10T07:15:00Z\",\"updatedAt\":\"2024-04-10T07:15:00Z\"},{\"id\":110,\"organisationPid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"organisationName\":\"Acme Corp\",\"animalPid\":\"f6417c11-d817-4626-9e8d-c68a44002d4b\",\"animalName\":\"Rose\",\"animalTagId\":\"AC007\",\"mass\":\"342.00\",\"recordDate\":\"2025-01-10\",\"notes\":\"Nine months after birth weight\",\"createdBy\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"createdByName\":\"John Doe\",\"createdAt\":\"2024-04-10T07:15:00Z\",\"updatedAt\":\"2024-04-10T07:15:00Z\"},{\"id\":109,\"organisationPid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"organisationName\":\"Acme Corp\",\"animalPid\":\"f6417c11-d817-4626-9e8d-c68a44002d4b\",\"animalName\":\"Rose\",\"animalTagId\":\"AC007\",\"mass\":\"300.00\",\"recordDate\":\"2024-12-10\",\"notes\":\"Eight months after birth weight\",\"createdBy\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"createdByName\":\"John Doe\",\"createdAt\":\"2024-04-10T07:15:00Z\",\"updatedAt\":\"2024-04-10T07:15:00Z\"},{\"id\":108,\"organisationPid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"organisationName\":\"Acme Corp\",\"animalPid\":\"f6417c11-d817-4626-9e8d-c68a44002d4b\",\"animalName\":\"Rose\",\"animalTagId\":\"AC007\",\"mass\":\"276.00\",\"recordDate\":\"2024-11-10\",\"notes\":\"Seven months after birth weight\",\"createdBy\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"createdByName\":\"John Doe\",\"createdAt\":\"2024-04-10T07:15:00Z\",\"updatedAt\":\"2024-04-10T07:15:00Z\"},{\"id\":107,\"organisationPid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"organisationName\":\"Acme Corp\",\"animalPid\":\"f6417c11-d817-4626-9e8d-c68a44002d4b\",\"animalName\":\"Rose\",\"animalTagId\":\"AC007\",\"mass\":\"238.00\",\"recordDate\":\"2024-10-11\",\"notes\":\"Six monts after birth weight\",\"createdBy\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"createdByName\":\"John Doe\",\"createdAt\":\"2024-04-10T07:15:00Z\",\"updatedAt\":\"2024-04-10T07:15:00Z\"},{\"id\":106,\"organisationPid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"organisationName\":\"Acme Corp\",\"animalPid\":\"f6417c11-d817-4626-9e8d-c68a44002d4b\",\"animalName\":\"Rose\",\"animalTagId\":\"AC007\",\"mass\":\"202.00\",\"recordDate\":\"2024-09-10\",\"notes\":\"Five month after birth weight\",\"createdBy\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"createdByName\":\"John Doe\",\"createdAt\":\"2024-04-10T07:15:00Z\",\"updatedAt\":\"2024-04-10T07:15:00Z\"},{\"id\":105,\"organisationPid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"organisationName\":\"Acme Corp\",\"animalPid\":\"f6417c11-d817-4626-9e8d-c68a44002d4b\",\"animalName\":\"Rose\",\"animalTagId\":\"AC007\",\"mass\":\"168.00\",\"recordDate\":\"2024-08-10\",\"notes\":\"Four months weight\",\"createdBy\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"createdByName\":\"John Doe\",\"createdAt\":\"2024-04-10T07:15:00Z\",\"updatedAt\":\"2024-04-10T07:15:00Z\"},{\"id\":104,\"organisationPid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"organisationName\":\"Acme Corp\",\"animalPid\":\"f6417c11-d817-4626-9e8d-c68a44002d4b\",\"animalName\":\"Rose\",\"animalTagId\":\"AC007\",\"mass\":\"136.00\",\"recordDate\":\"2024-07-10\",\"notes\":\"Three month after birth weight weight\",\"createdBy\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"createdByName\":\"John Doe\",\"createdAt\":\"2024-04-10T07:15:00Z\",\"updatedAt\":\"2024-04-10T07:15:00Z\"},{\"id\":103,\"organisationPid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"organisationName\":\"Acme Corp\",\"animalPid\":\"f6417c11-d817-4626-9e8d-c68a44002d4b\",\"animalName\":\"Rose\",\"animalTagId\":\"AC007\",\"mass\":\"100.00\",\"recordDate\":\"2024-06-10\",\"notes\":\"Two month after birth weight\",\"createdBy\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"createdByName\":\"John Doe\",\"createdAt\":\"2024-04-10T07:15:00Z\",\"updatedAt\":\"2024-04-10T07:15:00Z\"},{\"id\":102,\"organisationPid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"organisationName\":\"Acme Corp\",\"animalPid\":\"f6417c11-d817-4626-9e8d-c68a44002d4b\",\"animalName\":\"Rose\",\"animalTagId\":\"AC007\",\"mass\":\"64.00\",\"recordDate\":\"2024-05-10\",\"notes\":\"Month after birth weight\",\"createdBy\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"createdByName\":\"John Doe\",\"createdAt\":\"2024-04-10T07:15:00Z\",\"updatedAt\":\"2024-04-10T07:15:00Z\"},{\"id\":101,\"organisationPid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"organisationName\":\"Acme Corp\",\"animalPid\":\"f6417c11-d817-4626-9e8d-c68a44002d4b\",\"animalName\":\"Rose\",\"animalTagId\":\"AC007\",\"mass\":\"32.00\",\"recordDate\":\"2024-04-10\",\"notes\":\"Birth weight\",\"createdBy\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"createdByName\":\"John Doe\",\"createdAt\":\"2024-04-10T07:15:00Z\",\"updatedAt\":\"2024-04-10T07:15:00Z\"}]",
)
