tests/requests/snapshots/records/can_get_all_animal_query@precords.snap
---
source: tests/requests/production.rs
assertion_line: 68
expression: "(response.status_code(), response.text())"
---
(
    200,
    "[{\"id\":101,\"animalName\":\"Daisy\",\"animalPid\":\"b2bd6270-8bec-42ce-99ff-d0eb1a076221\",\"animalTagId\":\"AC001\",\"organisationName\":\"Acme Corp\",\"organisationPid\":\"9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0\",\"productType\":\"milk\",\"quantity\":\"20.00\",\"unit\":\"litre\",\"recordDate\":\"2024-06-21\",\"quality\":\"Hight fat milk\",\"notes\":null,\"createdBy\":\"bd6f7c26-d2c9-487e-b837-8f77be468033\",\"createdByName\":\"John Doe\",\"createdAt\":\"2024-06-21T10:15:00Z\",\"updatedAt\":\"2024-06-21T10:15:00Z\"}]",
)
